k8s/legacy/dev/services/argocd/chart/templates/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-ingress
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.dk8s.ipreston.net`)  # <-- Replace with your FQDN
      priority: 10
      kind: Rule
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argocd.dk8s.ipreston.net`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
          - name: argocd-server
            port: 80
            scheme: h2c
  tls:
    secretName: argo-web-ui-tls
